objects/Translation__c.object
<CustomObject>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item</label>
        <referenceTo>npsp__General_Accounting_Unit__c</referenceTo>
        <relationshipLabel>Translations</relationshipLabel>
        <relationshipName>Translation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Schedule</label>
        <referenceTo>HA_Payment_Schedule__c</referenceTo>
        <relationshipLabel>Translation</relationshipLabel>
        <relationshipName>Translation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Translated_Text__c</fullName>
        <label>Translated Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Translation</label>
    <nameField>
        <displayFormat>TR-{0000}</displayFormat>
        <label>Translation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Translation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>